# crowe-ml-pipeline

./: .dockerignore  .gitignore  ARCHITECTURE_VISION.md  COMPREHENSIVE_FEATURES.md  Crowe Logic XL  Dockerfile.fly  FLY_DEPLOYMENT.md  GCP_QUICKSTART.md  INSTALL_AND_RUN.md  PROJECT_STATUS.md  QUICK_COMMANDS.md  README.md  RUN_ALL_FEATURES.md  build_dataset.py  cloudbuild.yaml  deploy.sh  fly-startup.sh  fly.toml  pyproject.toml  requirements.txt  upload_metrics_to_bigquery.sh
.devcontainer/: devcontainer.json
.github/workflows/: fly-deploy.yml  validate.yaml
crios/src/: crios.py
crowe-coder/src/: index.ts
crowe-vision-platform/: Dockerfile  fly.toml
ml-enhancements/: dataset_curator.py
universal-fungal-intelligence-system/: .env.example  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROADMAP.md  README.md  deploy.sh  pytest.ini  requirements.txt  run_web_ui.py  setup.py  test_implementation.py
universal-fungal-intelligence-system/config/: development.py  gcp_config.py  production.py  testing.py
universal-fungal-intelligence-system/docker/: Dockerfile  docker-compose.yml  requirements.txt
universal-fungal-intelligence-system/docs/: api.md  development.md  installation.md  usage.md
universal-fungal-intelligence-system/scripts/: deploy.py  deploy_to_gcp.py  run_analysis.py  setup_database.py
universal-fungal-intelligence-system/src/: main.py
universal-fungal-intelligence-system/src/analysis/: __init__.py  chemical_analysis.py  impact_evaluation.py  molecular_modifications.py  therapeutic_assessment.py
universal-fungal-intelligence-system/src/core/: bioactivity_predictor.py  breakthrough_identifier.py  fungal_intelligence.py  molecular_analyzer.py  synthesis_predictor.py
universal-fungal-intelligence-system/src/database/: __init__.py  models.py
universal-fungal-intelligence-system/src/ml/: __init__.py
universal-fungal-intelligence-system/src/reports/: __init__.py
universal-fungal-intelligence-system/src/utils/: bigquery_exporter.py  chemistry_utils.py  data_utils.py  logging_config.py  medical_visualization.py
universal-fungal-intelligence-system/src/web_ui/: app.py  molecular_3d.py
universal-fungal-intelligence-system/tests/integration/: test_analysis_pipeline.py  test_data_collection.py
(+25 files in other folders)
